# scratch

./: .gitignore
cpp/: CMakeLists.txt  numerical_recipes_fft.cpp  scratch.cpp  test_random_gamma_generation.cpp  test_root_cern.cpp  wscript
python/: 137cs-8khz.C  60co_5khz.C  pileup_probability.py  probability_distribution_from_data.py  sample_spectrum.py  test_binary_un_packing.py  test_complexfft.py  test_dolosse.py  test_enum_class.py
